--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,11 +20,17 @@ dependencies:
   flutter:
     sdk: flutter
 
+
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
   english_words: ^4.0.0-0
   google_fonts: ^1.1.0
+  url_launcher: ^5.4.10
+  material_floating_search_bar: ^0.2.0
+  flappy_search_bar: 1.4.1
+  carousel_slider: ^3.0.0
+
 
 dev_dependencies:
   flutter_test:
@@ -41,6 +47,8 @@ flutter:
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
+  assets:
+    - assets/images/
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
